--- a/QTDesigner/bci_biosignals_03.ui
+++ b/QTDesigner/bci_biosignals_03.ui
@@ -44,14 +44,14 @@
          <widget class="QGroupBox" name="external_groupBox">
           <property name="minimumSize">
            <size>
-            <width>250</width>
-            <height>60</height>
+            <width>270</width>
+            <height>80</height>
            </size>
           </property>
           <property name="maximumSize">
            <size>
-            <width>250</width>
-            <height>60</height>
+            <width>270</width>
+            <height>80</height>
            </size>
           </property>
           <property name="title">
@@ -87,13 +87,13 @@
                <property name="minimumSize">
                 <size>
                  <width>100</width>
-                 <height>17</height>
+                 <height>25</height>
                 </size>
                </property>
                <property name="maximumSize">
                 <size>
                  <width>100</width>
-                 <height>17</height>
+                 <height>25</height>
                 </size>
                </property>
                <property name="text">
@@ -118,7 +118,7 @@
                <property name="maximumSize">
                 <size>
                  <width>100</width>
-                 <height>17</height>
+                 <height>25</height>
                 </size>
                </property>
                <property name="text">
@@ -148,14 +148,14 @@
          <widget class="QGroupBox" name="connect_groupBox">
           <property name="minimumSize">
            <size>
-            <width>250</width>
+            <width>270</width>
             <height>100</height>
            </size>
           </property>
           <property name="maximumSize">
            <size>
-            <width>250</width>
-            <height>100</height>
+            <width>270</width>
+            <height>300</height>
            </size>
           </property>
           <property name="title">
@@ -169,22 +169,29 @@
             <layout class="QHBoxLayout" name="horizontalLayout">
              <item>
               <layout class="QGridLayout" name="gridLayout_8">
-               <item row="0" column="1">
-                <widget class="QPushButton" name="btn_trigger">
-                 <property name="minimumSize">
-                  <size>
-                   <width>70</width>
-                   <height>17</height>
-                  </size>
+               <property name="leftMargin">
+                <number>0</number>
+               </property>
+               <item row="1" column="1">
+                <widget class="QTextEdit" name="textEdit">
+                 <property name="sizePolicy">
+                  <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+                   <horstretch>0</horstretch>
+                   <verstretch>0</verstretch>
+                  </sizepolicy>
                  </property>
                  <property name="maximumSize">
                   <size>
-                   <width>70</width>
-                   <height>17</height>
+                   <width>100</width>
+                   <height>25</height>
                   </size>
                  </property>
-                 <property name="text">
-                  <string>Trigger</string>
+                 <property name="html">
+                  <string>&lt;!DOCTYPE HTML PUBLIC &quot;-//W3C//DTD HTML 4.0//EN&quot; &quot;http://www.w3.org/TR/REC-html40/strict.dtd&quot;&gt;
+&lt;html&gt;&lt;head&gt;&lt;meta name=&quot;qrichtext&quot; content=&quot;1&quot; /&gt;&lt;style type=&quot;text/css&quot;&gt;
+p, li { white-space: pre-wrap; }
+&lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'Noto Sans'; font-size:10pt; font-weight:400; font-style:normal;&quot;&gt;
+&lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;'localhost'&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
                  </property>
                 </widget>
                </item>
@@ -196,13 +203,13 @@
                  <property name="minimumSize">
                   <size>
                    <width>70</width>
-                   <height>17</height>
+                   <height>25</height>
                   </size>
                  </property>
                  <property name="maximumSize">
                   <size>
                    <width>70</width>
-                   <height>17</height>
+                   <height>25</height>
                   </size>
                  </property>
                  <property name="layoutDirection">
@@ -213,12 +220,12 @@
                  </property>
                 </widget>
                </item>
-               <item row="1" column="1">
+               <item row="1" column="2">
                 <widget class="QSpinBox" name="spinBox">
                  <property name="maximumSize">
                   <size>
                    <width>70</width>
-                   <height>17</height>
+                   <height>25</height>
                   </size>
                  </property>
                  <property name="minimum">
@@ -229,7 +236,7 @@
                  </property>
                 </widget>
                </item>
-               <item row="1" column="0">
+               <item row="0" column="1">
                 <widget class="QPushButton" name="btn_start">
                  <property name="enabled">
                   <bool>true</bool>
@@ -243,11 +250,30 @@
                  <property name="maximumSize">
                   <size>
                    <width>70</width>
-                   <height>17</height>
+                   <height>25</height>
                   </size>
                  </property>
                  <property name="text">
                   <string>Start</string>
+                 </property>
+                </widget>
+               </item>
+               <item row="1" column="0">
+                <widget class="QPushButton" name="btn_trigger">
+                 <property name="minimumSize">
+                  <size>
+                   <width>70</width>
+                   <height>25</height>
+                  </size>
+                 </property>
+                 <property name="maximumSize">
+                  <size>
+                   <width>70</width>
+                   <height>25</height>
+                  </size>
+                 </property>
+                 <property name="text">
+                  <string>Trigger</string>
                  </property>
                 </widget>
                </item>
@@ -262,14 +288,14 @@
          <widget class="QGroupBox" name="controls_groupBox">
           <property name="minimumSize">
            <size>
-            <width>250</width>
-            <height>165</height>
+            <width>270</width>
+            <height>150</height>
            </size>
           </property>
           <property name="maximumSize">
            <size>
-            <width>250</width>
-            <height>165</height>
+            <width>270</width>
+            <height>300</height>
            </size>
           </property>
           <property name="title">
@@ -301,6 +327,18 @@
              </property>
              <item row="0" column="0">
               <widget class="QLabel" name="butterOrder_label">
+               <property name="minimumSize">
+                <size>
+                 <width>0</width>
+                 <height>0</height>
+                </size>
+               </property>
+               <property name="maximumSize">
+                <size>
+                 <width>16777215</width>
+                 <height>20</height>
+                </size>
+               </property>
                <property name="text">
                 <string>Butter filter order</string>
                </property>
@@ -308,6 +346,18 @@
              </item>
              <item row="0" column="1">
               <widget class="QSpinBox" name="butterOrder_spinBox">
+               <property name="minimumSize">
+                <size>
+                 <width>0</width>
+                 <height>0</height>
+                </size>
+               </property>
+               <property name="maximumSize">
+                <size>
+                 <width>50</width>
+                 <height>16777215</height>
+                </size>
+               </property>
                <property name="minimum">
                 <number>5</number>
                </property>
@@ -321,13 +371,31 @@
              </item>
              <item row="1" column="0">
               <widget class="QLabel" name="WindowsSize_label">
+               <property name="maximumSize">
+                <size>
+                 <width>16777215</width>
+                 <height>20</height>
+                </size>
+               </property>
                <property name="text">
-                <string>Windows size [seconds]</string>
+                <string>ShortView [seconds]</string>
                </property>
               </widget>
              </item>
              <item row="1" column="1">
               <widget class="QSpinBox" name="WindowsSize_spinBox">
+               <property name="minimumSize">
+                <size>
+                 <width>0</width>
+                 <height>0</height>
+                </size>
+               </property>
+               <property name="maximumSize">
+                <size>
+                 <width>50</width>
+                 <height>16777215</height>
+                </size>
+               </property>
                <property name="minimum">
                 <number>1</number>
                </property>
@@ -341,41 +409,93 @@
              </item>
              <item row="2" column="1">
               <widget class="QComboBox" name="frequency_comboBox">
+               <property name="minimumSize">
+                <size>
+                 <width>0</width>
+                 <height>0</height>
+                </size>
+               </property>
+               <property name="maximumSize">
+                <size>
+                 <width>150</width>
+                 <height>25</height>
+                </size>
+               </property>
                <property name="currentText">
                 <string/>
                </property>
               </widget>
              </item>
-             <item row="2" column="0">
-              <widget class="QLabel" name="frequency_label">
-               <property name="text">
-                <string>Frequency range</string>
-               </property>
-              </widget>
-             </item>
              <item row="3" column="0">
               <widget class="QLabel" name="filtering_label">
+               <property name="maximumSize">
+                <size>
+                 <width>16777215</width>
+                 <height>25</height>
+                </size>
+               </property>
                <property name="text">
                 <string>Filtering method</string>
                </property>
               </widget>
              </item>
              <item row="3" column="1">
-              <widget class="QComboBox" name="filtering_comboBox"/>
-             </item>
-            </layout>
-           </item>
-           <item>
-            <layout class="QHBoxLayout" name="controls_horizontalLayout">
-             <item>
-              <widget class="QRadioButton" name="Spectrogram_radioButton">
-               <property name="text">
-                <string>Spectrogram</string>
+              <widget class="QComboBox" name="filtering_comboBox">
+               <property name="minimumSize">
+                <size>
+                 <width>100</width>
+                 <height>0</height>
+                </size>
+               </property>
+               <property name="maximumSize">
+                <size>
+                 <width>150</width>
+                 <height>25</height>
+                </size>
                </property>
               </widget>
              </item>
-             <item>
-              <widget class="QComboBox" name="Spectrogram_comboBox"/>
+             <item row="2" column="0">
+              <widget class="QLabel" name="frequency_label">
+               <property name="maximumSize">
+                <size>
+                 <width>16777215</width>
+                 <height>25</height>
+                </size>
+               </property>
+               <property name="text">
+                <string>Frequency range</string>
+               </property>
+              </widget>
+             </item>
+             <item row="4" column="0">
+              <widget class="QRadioButton" name="Spectrogram_radioButton">
+               <property name="sizePolicy">
+                <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+                 <horstretch>0</horstretch>
+                 <verstretch>0</verstretch>
+                </sizepolicy>
+               </property>
+               <property name="layoutDirection">
+                <enum>Qt::LeftToRight</enum>
+               </property>
+               <property name="autoFillBackground">
+                <bool>false</bool>
+               </property>
+               <property name="text">
+                <string>Spectrogra&amp;m</string>
+               </property>
+              </widget>
+             </item>
+             <item row="4" column="1">
+              <widget class="QComboBox" name="Spectrogram_comboBox">
+               <property name="maximumSize">
+                <size>
+                 <width>100</width>
+                 <height>25</height>
+                </size>
+               </property>
+              </widget>
              </item>
             </layout>
            </item>
@@ -386,14 +506,14 @@
          <widget class="QGroupBox" name="log_groupBox">
           <property name="minimumSize">
            <size>
-            <width>250</width>
-            <height>200</height>
+            <width>270</width>
+            <height>250</height>
            </size>
           </property>
           <property name="maximumSize">
            <size>
             <width>250</width>
-            <height>16777215</height>
+            <height>500</height>
            </size>
           </property>
           <property name="title">
@@ -505,7 +625,7 @@
      <x>0</x>
      <y>0</y>
      <width>1084</width>
-     <height>20</height>
+     <height>32</height>
     </rect>
    </property>
   </widget>
